# 2021oscomp-best-kernel-design-impl

./: .fuse_hidden0000002400000001  .fuse_hidden0000009700000001  .fuse_hidden000000b000000001  .fuse_hidden000000c70000000c  .fuse_hidden000000ce00000001  .fuse_hidden000000d600000001  .fuse_hidden000000dc00000001  .fuse_hidden000000e800000002  .fuse_hidden0000010500000003  .fuse_hidden0000010e00000004  .fuse_hidden0000011400000005  .fuse_hidden0000013300000008  .fuse_hidden0000013900000009  .fuse_hidden000001420000000a  .fuse_hidden000001480000000b  .fuse_hidden0000014e0000000c  .fuse_hidden000001580000000d  .fuse_hidden000001620000000e  .fuse_hidden000004290000000f  .fuse_hidden0000042f00000010  .fuse_hidden0000043500000011  .fuse_hidden0000043b00000012  .fuse_hidden0000044100000013  .fuse_hidden0000045300000014  .fuse_hidden000004570000000e  .fuse_hidden0000045900000015  .fuse_hidden0000049600000068  .fuse_hidden000005c500000017  .fuse_hidden000005d700000019  .fuse_hidden000006200000001d  .fuse_hidden0000067600000019  .fuse_hidden000006770000001b  .fuse_hidden000006bc00000018  .fuse_hidden000006d60000001f  .fuse_hidden000006dc00000020  .fuse_hidden0000073600000021  .fuse_hidden0000074300000022  .fuse_hidden000007f400000028  .fuse_hidden000007fa00000029  .fuse_hidden000008000000002a  (+89 more)
codes/dependency/opensbi-rt/: Cargo.toml  LICENSE  README.md  build.rs  sbi64.x
codes/fat32-fuse/: .gitignore  Cargo.toml  mnt.sh  qemu_fs.sh
codes/fat32-fuse/fs/: sleep_simple  testsuites_brk  testsuites_close  testsuites_ls  testsuites_munmap  testsuites_openat  testsuites_read  testsuites_sleep  testsuites_umount  testsuites_uname  testsuites_yield_A  testsuites_yield_C  user_shell
codes/fat32-fuse/sd_mnt/: cmdline_args  fantastic_text  filetest_simple  forktest2  forktree  initproc  ls  user_shell
codes/fat32-fuse/sd_mnt2/: cat  exit  filea  forktest  forktest_simple  hello_world  matrix  pipe_large_test  pipetest  run_pipe_test  sleep  stack_overflow  testsuites_chdir  testsuites_clone  testsuites_dup  testsuites_dup2  testsuites_execve  testsuites_exit  testsuites_fork  testsuites_fstat  testsuites_getdents  testsuites_getpid  testsuites_getppid  testsuites_gettimeofday  testsuites_mkdir_  testsuites_mmap  testsuites_mount  testsuites_open  testsuites_pipe  testsuites_times  testsuites_wait  testsuites_waitpid  text.txt  user_shell  usertests  yield
codes/fat32-fuse/src/: main.rs
codes/os/: Cargo.toml  Makefile  Readme.md  build.rs  buildfs.sh
codes/os/.cargo/: config
codes/os/src/: config.rs  console.rs  entry.asm  main.rs  (+8 more)
codes/simple_fat32/: Cargo.toml
(+1049 files in other folders)
