[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { path = "../dependency/virtio-drivers" }
k210-pac = { path = "../dependency/k210-pac" }
k210-hal = { path = "../dependency/k210-hal" }
k210-soc = { path = "../dependency/k210-soc" }
simple-fat32 = { path = "../simple_fat32" }
embedded-hal = "1.0.0-alpha.1"
nb = "1"

[features]
board_qemu = []
board_k210 = []