[package]
name = "riscv-sbi-rt-macros"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
bitflags = "1"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]

[dependencies.rand]
version = "0.7"
default-features = false
features = ["small_rng"]
